--- a/GearObsession/GearObsession.csproj
+++ b/GearObsession/GearObsession.csproj
@@ -3,11 +3,13 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="FusionCharts.Visualization" Version="1.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="20.4.0.54" />
   </ItemGroup>
 </Project>
